sync status eta (#1701)
* sync status eta

* other necessary changes

* feat: Enhance Sync ETA display mode

- Enhance block rate calculation with weighted averages(accounts for network flunctuations and sync speed of more recent blocks while calculating eta, basically giving us more accuracy)
- Add option to switch between ETA and blocks remaining display in display settings
- Add placeholder ETA while gathering block data

* chore: Listen to smaller changes in eta

---------

Co-authored-by: Omar Hatem <omarh.ismail1@gmail.com>
Co-authored-by: Blazebrain <davidadegoke16@gmail.com>

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -354,6 +354,7 @@
   "estimated": "مُقدَّر",
   "estimated_new_fee": "رسوم جديدة مقدرة",
   "estimated_receive_amount": "مقدرة المبلغ الاستقبال",
+  "eta": "إيتا",
   "etherscan_history": "Etherscan تاريخ",
   "event": "ﺙﺪﺣ",
   "events": "ﺙﺍﺪﺣﻷ﻿ﺍ",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "جاري محاولة المزامنة",
   "sync_status_connected": "متصل",
   "sync_status_connecting": "يتم التوصيل",
+  "sync_status_display_mode": "مزامنة عرض حالة",
+  "sync_status_display_mode_blocks": "إظهار الكتل المتبقية",
+  "sync_status_display_mode_eta": "تظهر ETA",
   "sync_status_failed_connect": "انقطع الاتصال",
   "sync_status_not_connected": "غير متصل",
   "sync_status_starting_scan": "بدء المسح الضوئي (من ${height})",
