--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -354,6 +354,7 @@
   "estimated": "Изчислено",
   "estimated_new_fee": "Прогнозна нова такса",
   "estimated_receive_amount": "Прогнозна сума за получаване",
+  "eta": "Ета",
   "etherscan_history": "История на Etherscan",
   "event": "Събитие",
   "events": "събития",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "ОПИТ ЗА СИНХРОНИЗАЦИЯ",
   "sync_status_connected": "СВЪРЗВАНЕ",
   "sync_status_connecting": "СВЪРЗВАНЕ",
+  "sync_status_display_mode": "Дисплей на състоянието на синхронизиране",
+  "sync_status_display_mode_blocks": "Покажете останали блокове",
+  "sync_status_display_mode_eta": "Покажи ETA",
   "sync_status_failed_connect": "НЕУСПЕШНО СВЪРЗВАНЕ",
   "sync_status_not_connected": "НЯМА ВРЪЗКА",
   "sync_status_starting_scan": "Стартиране на сканиране (от ${height})",
