--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -354,6 +354,7 @@
   "estimated": "Geschätzt",
   "estimated_new_fee": "Geschätzte neue Gebühr",
   "estimated_receive_amount": "Geschätzter Empfangsbetrag",
+  "eta": "ETA",
   "etherscan_history": "Etherscan-Historie",
   "event": "Ereignis",
   "events": "Veranstaltungen",
@@ -911,6 +912,9 @@
   "sync_status_attempting_sync": "SYNC VERSUCHEN",
   "sync_status_connected": "VERBUNDEN",
   "sync_status_connecting": "VERBINDEN",
+  "sync_status_display_mode": "Synchronisationsstatusanzeige",
+  "sync_status_display_mode_blocks": "Blöcke verbleibend zeigen",
+  "sync_status_display_mode_eta": "Zeigen ETA",
   "sync_status_failed_connect": "GETRENNT",
   "sync_status_not_connected": "NICHT VERBUNDEN",
   "sync_status_starting_scan": "SCAN starten (von ${height})",
