--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -354,6 +354,7 @@
   "estimated": "Estimado",
   "estimated_new_fee": "Nueva tarifa estimada",
   "estimated_receive_amount": "Cantidad de recepción estimada",
+  "eta": "ETA",
   "etherscan_history": "historia de etherscan",
   "event": "Evento",
   "events": "Eventos",
@@ -911,6 +912,9 @@
   "sync_status_attempting_sync": "INTENTAR SINCRONIZAR",
   "sync_status_connected": "CONECTADO",
   "sync_status_connecting": "CONECTANDO",
+  "sync_status_display_mode": "Pantalla de estado de sincronización",
+  "sync_status_display_mode_blocks": "Mostrar bloques restantes",
+  "sync_status_display_mode_eta": "Mostrar ETA",
   "sync_status_failed_connect": "DESCONECTADO",
   "sync_status_not_connected": "NO CONECTADO",
   "sync_status_starting_scan": "Iniciar escaneo (de ${height})",
