--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -354,6 +354,7 @@
   "estimated": "Kiyasta",
   "estimated_new_fee": "An kiyasta sabon kudin",
   "estimated_receive_amount": "Kiyasta samun adadin",
+  "eta": "Tsire-tsire",
   "etherscan_history": "Etherscan tarihin kowane zamani",
   "event": "Lamarin",
   "events": "Abubuwan da suka faru",
@@ -912,6 +913,9 @@
   "sync_status_attempting_sync": "KWAFI",
   "sync_status_connected": "HANNU",
   "sync_status_connecting": "HADA",
+  "sync_status_display_mode": "Nunin halin Setc",
+  "sync_status_display_mode_blocks": "Nuna shinge da sauran",
+  "sync_status_display_mode_eta": "Nuna ETA",
   "sync_status_failed_connect": "BABU INTERNET",
   "sync_status_not_connected": "BABU INTERNET",
   "sync_status_starting_scan": "Farawa Scan (daga ${height})",
