--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -354,6 +354,7 @@
   "estimated": "अनुमानित",
   "estimated_new_fee": "अनुमानित नया शुल्क",
   "estimated_receive_amount": "अनुमानित राशि",
+  "eta": "ईटा",
   "etherscan_history": "इथरस्कैन इतिहास",
   "event": "आयोजन",
   "events": "आयोजन",
@@ -912,6 +913,9 @@
   "sync_status_attempting_sync": "सिंक करने का प्रयास",
   "sync_status_connected": "जुड़े हुए",
   "sync_status_connecting": "कनेक्ट",
+  "sync_status_display_mode": "सिंक स्थिति प्रदर्शन",
+  "sync_status_display_mode_blocks": "शेष ब्लॉक दिखाएं",
+  "sync_status_display_mode_eta": "शो एटा",
   "sync_status_failed_connect": "डिस्कनेक्ट किया गया",
   "sync_status_not_connected": "जुड़े नहीं हैं",
   "sync_status_starting_scan": "स्कैन शुरू करना (${height} से)",
