--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -354,6 +354,7 @@
   "estimated": "procijenjen",
   "estimated_new_fee": "Procijenjena nova naknada",
   "estimated_receive_amount": "Procijenjeni iznos primanja",
+  "eta": "Eta",
   "etherscan_history": "Etherscan povijest",
   "event": "Događaj",
   "events": "Događaji",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "POKUŠAJ SINKRONIZACIJE",
   "sync_status_connected": "SPOJENO",
   "sync_status_connecting": "SPAJANJE",
+  "sync_status_display_mode": "Sinkronizirani prikaz statusa",
+  "sync_status_display_mode_blocks": "Prikažite preostale blokove",
+  "sync_status_display_mode_eta": "Pokazati eta",
   "sync_status_failed_connect": "ISKLJUČENO",
   "sync_status_not_connected": "NIJE POVEZANO",
   "sync_status_starting_scan": "Početno skeniranje (od ${height})",
