--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -354,6 +354,7 @@
   "estimated": "Գնահատված",
   "estimated_new_fee": "Գնահատված նոր միջնորդավճար",
   "estimated_receive_amount": "Գնահատված ստացված գումար",
+  "eta": "Eta",
   "etherscan_history": "Etherscan պատմություն",
   "event": "Իրադարձություն",
   "events": "Իրադարձություններ",
@@ -908,6 +909,9 @@
   "sync_status_attempting_sync": "ՀԱՄԱԺԱՄԵՑՄԱՆ ՓՈՐՁ",
   "sync_status_connected": "ՄԻԱՑՎԱԾԷ",
   "sync_status_connecting": "ՄԻԱՑՎՈՒՄ Է",
+  "sync_status_display_mode": "Sync կարգավիճակի ցուցադրում",
+  "sync_status_display_mode_blocks": "Show ուցադրել բլոկները",
+  "sync_status_display_mode_eta": "Show ուցադրել ETA",
   "sync_status_failed_connect": "ՉՄԻԱՑԱՎ",
   "sync_status_not_connected": "ՄԻԱՑՎԱԾ ՉԷ",
   "sync_status_starting_scan": "Սկսած սկան (${height})",
