--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -354,6 +354,7 @@
   "estimated": "Diperkirakan",
   "estimated_new_fee": "Perkiraan biaya baru",
   "estimated_receive_amount": "Diperkirakan jumlah menerima",
+  "eta": "Eta",
   "etherscan_history": "Sejarah Etherscan",
   "event": "Peristiwa",
   "events": "Acara",
@@ -913,6 +914,9 @@
   "sync_status_attempting_sync": "MENCOBA SINKRONISASI",
   "sync_status_connected": "TERHUBUNG",
   "sync_status_connecting": "MENGHUBUNGKAN",
+  "sync_status_display_mode": "Tampilan Status Sinkronisasi",
+  "sync_status_display_mode_blocks": "Tampilkan blok tersisa",
+  "sync_status_display_mode_eta": "Tunjukkan eta",
   "sync_status_failed_connect": "GAGAL TERHUBUNG",
   "sync_status_not_connected": "TIDAK TERHUBUNG",
   "sync_status_starting_scan": "Mulai pemindaian (dari ${height})",
