--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -354,6 +354,7 @@
   "estimated": "推定",
   "estimated_new_fee": "推定新しい料金",
   "estimated_receive_amount": "推定受信金額",
+  "eta": "ETA",
   "etherscan_history": "イーサスキャンの歴史",
   "event": "イベント",
   "events": "イベント",
@@ -911,6 +912,9 @@
   "sync_status_attempting_sync": "同期を試みています",
   "sync_status_connected": "接続済み",
   "sync_status_connecting": "接続中",
+  "sync_status_display_mode": "ステータス表示を同期します",
+  "sync_status_display_mode_blocks": "残りのブロックを表示します",
+  "sync_status_display_mode_eta": "ETAを表示します",
   "sync_status_failed_connect": "切断されました",
   "sync_status_not_connected": "接続されていません",
   "sync_status_starting_scan": "スキャンを開始する（${height} から）",
