--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -354,6 +354,7 @@
   "estimated": "ခန့်မှန်း",
   "estimated_new_fee": "ခန့်မှန်းသစ်ခန့်မှန်း",
   "estimated_receive_amount": "ခန့်မှန်းရရှိသောပမာဏ",
+  "eta": "eta",
   "etherscan_history": "Etherscan သမိုင်း",
   "event": "ပွဲ",
   "events": "အဲ့ဒါနဲ့",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "ချိန်ကိုက်ခြင်းကို ကြိုးစားနေသည်။",
   "sync_status_connected": "ချိတ်ဆက်ထားသည်။",
   "sync_status_connecting": "ချိတ်ဆက်ခြင်း။",
+  "sync_status_display_mode": "Sync status display ကို",
+  "sync_status_display_mode_blocks": "ကျန်ရှိနေသေးသောလုပ်ကွက်များကိုပြပါ",
+  "sync_status_display_mode_eta": "Eta ကိုပြပါ",
   "sync_status_failed_connect": "အဆက်အသွယ်ဖြတ်ထားသည်။",
   "sync_status_not_connected": "မချိတ်ဆက်ပါ။",
   "sync_status_starting_scan": "စကင်ဖတ်စစ်ဆေးမှုစတင်ခြင်း (${height})",
