--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -354,6 +354,7 @@
   "estimated": "Oszacowano",
   "estimated_new_fee": "Szacowana nowa opłata",
   "estimated_receive_amount": "Szacowana kwota otrzymania",
+  "eta": "Eta",
   "etherscan_history": "Historia Etherscanu",
   "event": "Wydarzenie",
   "events": "Wydarzenia",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "PRÓBA SYNCHRONIZACJI",
   "sync_status_connected": "POŁĄCZONY",
   "sync_status_connecting": "ŁĄCZENIE",
+  "sync_status_display_mode": "Wyświetlanie statusu synchronizacji",
+  "sync_status_display_mode_blocks": "Pokaż pozostałe bloki",
+  "sync_status_display_mode_eta": "Pokaż eta",
   "sync_status_failed_connect": "POŁĄCZENIE NIEUDANE",
   "sync_status_not_connected": "NIE POŁĄCZONY",
   "sync_status_starting_scan": "Rozpoczęcie skanowania (od ${height})",
