--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -354,6 +354,7 @@
   "estimated": "Estimado",
   "estimated_new_fee": "Nova taxa estimada",
   "estimated_receive_amount": "Valor estimado de recebimento",
+  "eta": "ETA",
   "etherscan_history": "história Etherscan",
   "event": "Evento",
   "events": "Eventos",
@@ -912,6 +913,9 @@
   "sync_status_attempting_sync": "TENTANDO SINCRONIZAR",
   "sync_status_connected": "CONECTADO",
   "sync_status_connecting": "CONECTANDO",
+  "sync_status_display_mode": "Exibição de status de sincronização",
+  "sync_status_display_mode_blocks": "Mostre blocos restantes",
+  "sync_status_display_mode_eta": "Mostre ETA",
   "sync_status_failed_connect": "DESCONECTADO",
   "sync_status_not_connected": "DESCONECTADO",
   "sync_status_starting_scan": "Começando scan (de ${height})",
