--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -354,6 +354,7 @@
   "estimated": "Примерно",
   "estimated_new_fee": "Расчетная новая плата",
   "estimated_receive_amount": "Расчетная сумма получения",
+  "eta": "ETA",
   "etherscan_history": "История Эфириума",
   "event": "Событие",
   "events": "События",
@@ -911,6 +912,9 @@
   "sync_status_attempting_sync": "ПОПЫТКА СИНХРОНИЗАЦИИ",
   "sync_status_connected": "ПОДКЛЮЧЕНО",
   "sync_status_connecting": "ПОДКЛЮЧЕНИЕ",
+  "sync_status_display_mode": "Отображение статуса синхронизации",
+  "sync_status_display_mode_blocks": "Показать оставшиеся блоки",
+  "sync_status_display_mode_eta": "Показать ETA",
   "sync_status_failed_connect": "ОТКЛЮЧЕНО",
   "sync_status_not_connected": "НЕ ПОДКЛЮЧЁН",
   "sync_status_starting_scan": "Начальное сканирование (от ${height})",
