--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -354,6 +354,7 @@
   "estimated": "ประมาณการ",
   "estimated_new_fee": "ค่าธรรมเนียมใหม่โดยประมาณ",
   "estimated_receive_amount": "โดยประมาณว่าจำนวนเงินที่ได้รับ",
+  "eta": "กทพ.",
   "etherscan_history": "ประวัติอีเธอร์สแกน",
   "event": "เหตุการณ์",
   "events": "กิจกรรม",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "พยายามซิงโครไนซ์",
   "sync_status_connected": "เชื่อมต่อแล้ว",
   "sync_status_connecting": "กำลังเชื่อมต่อ",
+  "sync_status_display_mode": "การแสดงสถานะซิงค์",
+  "sync_status_display_mode_blocks": "โชว์บล็อกที่เหลืออยู่",
+  "sync_status_display_mode_eta": "แสดง ETA",
   "sync_status_failed_connect": "การเชื่อมต่อล้มเหลว",
   "sync_status_not_connected": "ไม่ได้เชื่อมต่อ",
   "sync_status_starting_scan": "การสแกนเริ่มต้น (จาก ${height})",
