--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -354,6 +354,7 @@
   "estimated": "Tinatayang",
   "estimated_new_fee": "Tinatayang bagong fee",
   "estimated_receive_amount": "Tinatayang natanggap na halaga",
+  "eta": "Eta",
   "etherscan_history": "Kasaysayan ng Etherscan",
   "event": "Kaganapan",
   "events": "Mga kaganapan",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "SINUSUBUKANG I-SYNC",
   "sync_status_connected": "KONEKTADO",
   "sync_status_connecting": "KUMOKENEKTA",
+  "sync_status_display_mode": "Pagpapakita ng katayuan ng pag -sync",
+  "sync_status_display_mode_blocks": "Ipakita ang natitirang mga bloke",
+  "sync_status_display_mode_eta": "Ipakita ang Eta",
   "sync_status_failed_connect": "NADISKONEKTA",
   "sync_status_not_connected": "HINDI KONEKTADO",
   "sync_status_starting_scan": "Simula sa pag -scan (mula sa ${height})",
