--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -354,6 +354,7 @@
   "estimated": "Приблизно ",
   "estimated_new_fee": "Орієнтовна нова комісія",
   "estimated_receive_amount": "Орієнтовна сума отримує",
+  "eta": "ETA",
   "etherscan_history": "Історія Etherscan",
   "event": "Подія",
   "events": "Події",
@@ -911,6 +912,9 @@
   "sync_status_attempting_sync": "СПРОБА СИНХРОНІЗАЦІЇ",
   "sync_status_connected": "ПІДКЛЮЧЕНО",
   "sync_status_connecting": "ПІДКЛЮЧЕННЯ",
+  "sync_status_display_mode": "Дисплей стану синхронізації",
+  "sync_status_display_mode_blocks": "Показати блоки, що залишилися",
+  "sync_status_display_mode_eta": "Шоу ETA",
   "sync_status_failed_connect": "ВІДКЛЮЧЕНО",
   "sync_status_not_connected": "НЕ ПІДКЛЮЧЕННИЙ",
   "sync_status_starting_scan": "Початок сканування (від ${height})",
