--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -354,6 +354,7 @@
   "estimated": "تخمینہ لگایا",
   "estimated_new_fee": "تخمینہ شدہ نئی فیس",
   "estimated_receive_amount": "تخمینہ وصول کی رقم",
+  "eta": "ETA",
   "etherscan_history": "ﺦﯾﺭﺎﺗ ﯽﮐ ﻦﯿﮑﺳﺍ ﺮﮭﺘﯾﺍ",
   "event": "ﺐﯾﺮﻘﺗ",
   "events": "ﺕﺎﺒﯾﺮﻘﺗ",
@@ -912,6 +913,9 @@
   "sync_status_attempting_sync": "ہم آہنگی کی کوشش کر رہا ہے۔",
   "sync_status_connected": "منسلک",
   "sync_status_connecting": "جڑ رہا ہے۔",
+  "sync_status_display_mode": "مطابقت پذیری کی حیثیت ڈسپلے",
+  "sync_status_display_mode_blocks": "باقی بلاکس دکھائیں",
+  "sync_status_display_mode_eta": "ETA دکھائیں",
   "sync_status_failed_connect": "منقطع",
   "sync_status_not_connected": "منسلک نہیں",
   "sync_status_starting_scan": "اسکین شروع کرنا (${height})",
