--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -353,6 +353,7 @@
   "estimated": "Ước tính",
   "estimated_new_fee": "Phí mới ước tính",
   "estimated_receive_amount": "Số tiền nhận ước tính",
+  "eta": "Eta",
   "etherscan_history": "Lịch sử Etherscan",
   "event": "Sự kiện",
   "events": "Các sự kiện",
@@ -907,6 +908,9 @@
   "sync_status_attempting_sync": "ĐANG THỬ ĐỒNG BỘ",
   "sync_status_connected": "ĐÃ KẾT NỐI",
   "sync_status_connecting": "ĐANG KẾT NỐI",
+  "sync_status_display_mode": "Hiển thị trạng thái đồng bộ hóa",
+  "sync_status_display_mode_blocks": "Hiển thị các khối còn lại",
+  "sync_status_display_mode_eta": "Hiển thị ETA",
   "sync_status_failed_connect": "ĐÃ NGẮT KẾT NỐI",
   "sync_status_not_connected": "CHƯA KẾT NỐI",
   "sync_status_starting_scan": "ĐANG BẮT ĐẦU QUÉT (${height})",
