--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -355,6 +355,7 @@
   "estimated": "Ó tó a fojú díwọ̀n",
   "estimated_new_fee": "Ifoju tuntun owo tuntun",
   "estimated_receive_amount": "Ifoju gba iye",
+  "eta": "Eta",
   "etherscan_history": "Etherscan itan",
   "event": "Iṣẹlẹ",
   "events": "Awọn iṣẹlẹ",
@@ -911,6 +912,9 @@
   "sync_status_attempting_sync": "Ń GBÌYÀNJÚ MÚDỌ́GBA",
   "sync_status_connected": "TI DÁRAPỌ̀ MỌ́",
   "sync_status_connecting": "Ń DÁRAPỌ̀ MỌ́",
+  "sync_status_display_mode": "Sync Ifihan Ipo",
+  "sync_status_display_mode_blocks": "Ṣafihan awọn bulọọki ti o ku",
+  "sync_status_display_mode_eta": "Fihan efa",
   "sync_status_failed_connect": "ÌKÀNPỌ̀ TI KÚ",
   "sync_status_not_connected": "KÒ TI DÁRAPỌ̀ MỌ́ Ọ",
   "sync_status_starting_scan": "Ibẹrẹ ọlọjẹ (lati ${height})",
