--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -354,6 +354,7 @@
   "estimated": "估计值",
   "estimated_new_fee": "估计新费用",
   "estimated_receive_amount": "估计接收金额",
+  "eta": "ETA",
   "etherscan_history": "以太扫描历史",
   "event": "事件",
   "events": "活动",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "嘗試同步",
   "sync_status_connected": "已连接",
   "sync_status_connecting": "连接中",
+  "sync_status_display_mode": "同步状态显示",
+  "sync_status_display_mode_blocks": "剩下的显示块",
+  "sync_status_display_mode_eta": "显示ETA",
   "sync_status_failed_connect": "断线",
   "sync_status_not_connected": "未连接",
   "sync_status_starting_scan": "启动扫描（来自 ${height}）",
