--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -354,6 +354,7 @@
   "estimated": "Odhadováno",
   "estimated_new_fee": "Odhadovaný nový poplatek",
   "estimated_receive_amount": "Odhadovaná částka přijímání",
+  "eta": "ETA",
   "etherscan_history": "Historie Etherscanu",
   "event": "událost",
   "events": "Události",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "ZAHAJUJI SYNCHR.",
   "sync_status_connected": "PŘIPOJENO",
   "sync_status_connecting": "PŘIPOJOVÁNÍ",
+  "sync_status_display_mode": "Synchronizace stavu stavu",
+  "sync_status_display_mode_blocks": "Zobrazit bloky zbývající",
+  "sync_status_display_mode_eta": "Ukažte ETA",
   "sync_status_failed_connect": "ODPOJENO",
   "sync_status_not_connected": "NEPŘIPOJENO",
   "sync_status_starting_scan": "Počáteční skenování (z ${height})",
