--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -354,6 +354,7 @@
   "estimated": "Estimated",
   "estimated_new_fee": "Estimated new fee",
   "estimated_receive_amount": "Estimated receive amount",
+  "eta": "ETA",
   "etherscan_history": "Etherscan history",
   "event": "Event",
   "events": "Events",
@@ -911,6 +912,9 @@
   "sync_status_attempting_sync": "ATTEMPTING SYNC",
   "sync_status_connected": "CONNECTED",
   "sync_status_connecting": "CONNECTING",
+  "sync_status_display_mode": "Sync Status Display",
+  "sync_status_display_mode_blocks": "Show Blocks Remaining",
+  "sync_status_display_mode_eta": "Show ETA",
   "sync_status_failed_connect": "DISCONNECTED",
   "sync_status_not_connected": "NOT CONNECTED",
   "sync_status_starting_scan": "STARTING SCAN (from ${height})",
