--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -354,6 +354,7 @@
   "estimated": "Estimé",
   "estimated_new_fee": "De nouveaux frais estimés",
   "estimated_receive_amount": "Recevoir estimé le montant",
+  "eta": "ETA",
   "etherscan_history": "Historique Etherscan",
   "event": "Événement",
   "events": "Événements",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "TENTATIVE DE SYNCHRONISATION",
   "sync_status_connected": "CONNECTÉ",
   "sync_status_connecting": "CONNEXION EN COURS",
+  "sync_status_display_mode": "Affichage de l'état de synchronisation",
+  "sync_status_display_mode_blocks": "Afficher les blocs restants",
+  "sync_status_display_mode_eta": "Show Eta",
   "sync_status_failed_connect": "DÉCONNECTÉ",
   "sync_status_not_connected": "NON CONNECTÉ",
   "sync_status_starting_scan": "Démarrer la numérisation (à partir de ${height})",
