--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -354,6 +354,7 @@
   "estimated": "Stimato",
   "estimated_new_fee": "Nuova commissione stimata",
   "estimated_receive_amount": "Importo di ricezione stimato",
+  "eta": "Eta",
   "etherscan_history": "Cronologia Etherscan",
   "event": "Evento",
   "events": "Eventi",
@@ -911,6 +912,9 @@
   "sync_status_attempting_sync": "TENTATIVO DI SINCRONIZZAZIONE",
   "sync_status_connected": "CONNESSO",
   "sync_status_connecting": "CONNESSIONE",
+  "sync_status_display_mode": "Visualizzazione dello stato di sincronizzazione",
+  "sync_status_display_mode_blocks": "Mostra blocchi rimanenti",
+  "sync_status_display_mode_eta": "Mostra eta",
   "sync_status_failed_connect": "DISCONNESSO",
   "sync_status_not_connected": "NON CONNESSO",
   "sync_status_starting_scan": "AVVIO SCANSIONE (da ${height})",
