--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -354,6 +354,7 @@
   "estimated": "예상",
   "estimated_new_fee": "예상 새 수수료",
   "estimated_receive_amount": "예상 수령 금액",
+  "eta": "에타",
   "etherscan_history": "Etherscan 내역",
   "event": "이벤트",
   "events": "이벤트",
@@ -911,6 +912,9 @@
   "sync_status_attempting_sync": "동기화 시도 중",
   "sync_status_connected": "연결됨",
   "sync_status_connecting": "연결 중",
+  "sync_status_display_mode": "동기화 상태 표시",
+  "sync_status_display_mode_blocks": "남은 블록을 보여줍니다",
+  "sync_status_display_mode_eta": "ETA를 보여주십시오",
   "sync_status_failed_connect": "연결 끊김",
   "sync_status_not_connected": "연결되지 않음",
   "sync_status_starting_scan": "스캔 시작 중 (${height}부터)",
