--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -354,6 +354,7 @@
   "estimated": "Geschatte",
   "estimated_new_fee": "Geschatte nieuwe vergoeding",
   "estimated_receive_amount": "Geschat ontvangen bedrag",
+  "eta": "ETA",
   "etherscan_history": "Etherscan-geschiedenis",
   "event": "Evenement",
   "events": "Evenementen",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "SYNCHRONISATIE PROBEREN",
   "sync_status_connected": "VERBONDEN",
   "sync_status_connecting": "AANSLUITING",
+  "sync_status_display_mode": "Synchronisatiestatusweergave",
+  "sync_status_display_mode_blocks": "Toon blokken overgebleven",
+  "sync_status_display_mode_eta": "Toon ETA",
   "sync_status_failed_connect": "LOSGEKOPPELD",
   "sync_status_not_connected": "NIET VERBONDEN",
   "sync_status_starting_scan": "SCAN starten (van ${height})",
