--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -354,6 +354,7 @@
   "estimated": "Tahmini",
   "estimated_new_fee": "Tahmini yeni ücret",
   "estimated_receive_amount": "Tahmini alma miktarı",
+  "eta": "ETA",
   "etherscan_history": "Etherscan geçmişi",
   "event": "Etkinlik",
   "events": "Olaylar",
@@ -910,6 +911,9 @@
   "sync_status_attempting_sync": "SENKRONİZE EDİLMEYE ÇALIŞILIYOR",
   "sync_status_connected": "BAĞLANILDI",
   "sync_status_connecting": "BAĞLANILIYOR",
+  "sync_status_display_mode": "Senkronizasyon Durum Ekranı",
+  "sync_status_display_mode_blocks": "Kalan blokları göster",
+  "sync_status_display_mode_eta": "ETA'yı Göster",
   "sync_status_failed_connect": "BAĞLANTI KESİLDİ",
   "sync_status_not_connected": "BAĞLI DEĞİL",
   "sync_status_starting_scan": "Başlangıç ​​taraması (${height})",
